/*
 * Cryptonose2
 *
 * Copyright © 2019-2020 Dawid Motyka
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 *
 */

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
    id "org.beryx.jlink" version "2.22.3"
}

group 'pl.dmotyka'
version '2.14.0'
description 'Real-time alerts about significant price changes on cryptocurrency exchanges'

java {
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

application {
    mainModule = "cryptonose"
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'pl.dmotyka', name: 'dmutils', version:'1.0.0'
    compile group: 'pl.dmotyka', name: 'exchangeutils', version:'1.11.1'
    compile group: 'pl.dmotyka', name: 'cryptonoseengine', version:'1.5.6'
    compile group: 'pl.dmotyka', name: 'minimal-fx-charts', version: '1.0.0'
    compile group: 'com.dorkbox', name: 'Notify', version:'3.7'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
    compile group: 'org.pf4j', name: 'pf4j', version: '3.5.0'
    compile group: 'org.ow2.asm', name: 'asm', version: '7.0'
}

javafx {
    modules = ['javafx.controls', 'javafx.graphics', 'javafx.fxml']
}

mainClassName = "pl.dmotyka.cryptonose2.AppStarter"

run {
    jvmArgs = ['-Dsun.java2d.uiScale=1.0', '-Djava.util.logging.config.file=logging-debug.settings', '-Dversion='+project.version]
}

jlink {
    options = ['--strip-debug', '--compress', '0', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'Cryptonose'
        jvmArgs = ['-Dsun.java2d.uiScale=1.0', '-Dversion='+project.version]
    }
    forceMerge('log4j-api')

    jpackage {
        // Set the environment property BADASS_JLINK_JPACKAGE_HOME or explicitly configure the below property
        // jpackageHome = '/usr/lib/jvm/adoptopenjdk-14-openj9-amd64'
        installerOptions += [
                '--description', project.description,
                '--app-version', version,
                '--copyright', 'Copyrigtht 2020 Dawid Motyka',
                '--license-file', 'LICENSE.txt',
                '--vendor', 'Dawid Motyka'
        ]
        if (org.gradle.internal.os.OperatingSystem.current().linux) {
            imageOptions += ['--icon', 'src/main/resources/launcher.png']
            installerOptions += [
                    '--resource-dir', "build/jpackage/Cryptonose/lib",
                    '--linux-menu-group', 'Network',
                    '--description', project.description,
                    '--app-version', version,
                    '--linux-shortcut',
                    '--linux-deb-maintainer', 'cryptonose2@gmail.com',
                    '--linux-rpm-license-type', 'MIT'
            ]
        }
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            imageOptions += ['--icon', 'src/main/resources/launcher.ico']
            installerOptions += ['--win-per-user-install',
                                 '--win-dir-chooser',
                                 '--win-menu',
                                 '--win-shortcut',]
        }
    }
}

task packZipLinux(type: Exec) {
    commandLine 'bash', './pack_zip.sh', 'cryptonose-' + version + '-' + org.gradle.internal.os.OperatingSystem.current().name + '.zip'
}

task packZip {
    if (org.gradle.internal.os.OperatingSystem.current().linux) {
        dependsOn(packZipLinux)
    }
}

jpackage.finalizedBy packZip
